syntax = "proto3";

package evm.tokens.types.v1;

import "google/protobuf/timestamp.proto";

message Events {
  repeated Transfer transfers = 1;
  repeated BalanceChange balance_changes = 2;
}

enum TokenType {
  TOKEN_TYPE_UNSPECIFIED = 0;
  TOKEN_TYPE_ERC20 = 1; // ERC-20
  TOKEN_TYPE_NATIVE = 2; // Native (ETH)
}

message BalanceChange {
  // -- block --
  uint64 block_num = 1;
  string block_hash = 2;
  google.protobuf.Timestamp timestamp = 3;
  string date = 4;

  // -- transaction --
  string transaction_id = 5;

  // -- ordering --
  uint64 ordinal = 10; // storage_change.ordinal or balance_change.ordinal
  uint64 global_sequence = 11; // latest global sequence of the balance change (block_num << 32 + index)

  // -- balance change --
  string contract = 20; // storage_change.address
  string owner = 21;
  string old_balance = 22;
  string new_balance = 23;

  // -- metadata --
  TokenType type = 100;
  Reason reason = 101;
  Algorithm algorithm = 102;

  enum Reason {
    REASON_UNSPECIFIED = 0;
    REASON_REWARD_MINE_UNCLE = 1;
    REASON_REWARD_MINE_BLOCK = 2;
    REASON_DAO_REFUND_CONTRACT = 3;
    REASON_DAO_ADJUST_BALANCE = 4;
    REASON_TRANSFER = 5;
    REASON_GENESIS_BALANCE = 6;
    REASON_GAS_BUY = 7;
    REASON_REWARD_TRANSACTION_FEE = 8;
    REASON_REWARD_FEE_RESET = 14;
    REASON_GAS_REFUND = 9;
    REASON_TOUCH_ACCOUNT = 10;
    REASON_SUICIDE_REFUND = 11;
    REASON_SUICIDE_WITHDRAW = 13;
    REASON_CALL_BALANCE_OVERRIDE = 12;
    // Used on chain(s) where some Ether burning happens
    REASON_BURN = 15;
    REASON_WITHDRAWAL = 16;

    // Rewards for Blob processing on BNB chain added in Tycho hard-fork, refers
    // to BNB documentation to check the timestamp at which it was activated.
    REASON_REWARD_BLOB_FEE = 17;

    // This reason is used only on Optimism chain.
    REASON_INCREASE_MINT = 18;
  }

  enum Algorithm {
    ALGORITHM_UNSPECIFIED = 0;
    ALGORITHM_CALL = 1; // ERC-20 within a Transfer call
    ALGORITHM_CALL_NO_VALID_BALANCE = 2; // ERC-20 within a Transfer call, without a matching balance change to transfer value
    ALGORITHM_CHILD_CALLS = 3; // ERC-20 different Transfer call
    ALGORITHM_REBASING_TOKEN = 4; // ERC-20 which the balances grow over time due to accrued interest
    ALGORITHM_FAILED = 5; // Native (ETH) failed transaction
  }
}

message Transfer {
  // -- block --
  uint64 block_num = 1;
  string block_hash = 2;
  google.protobuf.Timestamp timestamp = 3;
  string date = 4;

  // -- transaction --
  string transaction_id = 5;

  // -- ordinal --
  uint64 ordinal = 10; // log.ordinal
  uint64 global_sequence = 11; // latest global sequence of the transfer (block_num << 32 + index)

  // -- transfer --
  string contract = 20; // log.address
  string from = 21;
  string to = 22;
  string value = 23;

  // -- metadata --
  TokenType type = 100;

  // // TO-DO: not implemented yet
  // enum Reason {
  //   REASON_UNSPECIFIED = 0;
  //   REASON_MINT = 1; // ERC-20 mint
  //   REASON_BURN = 2; // ERC-20 burn
  //   REASON_FISHING = 3; // ERC-20 fishing
  // }
}